src/components/ask-manager/ask-manager.css
* {
  box-sizing: border-box;
}
:host {
  --marginButton: 0.3em;
  --heightButton: 3em;
  --maxHeightConsentBox: 30%;
  --maxHeightConsentBoxTablet: 50%;
  --maxHeightConsentBoxMobile: 60%;
  --maxHeightOptionsBox: 80%;

  /* Can be changed in TypeScript */
  --borderRadiusMainbox: 3px;
  --borderRadiusButton: 10px;
  --borderRadiusButtonMobile: 1.5em;
  --backgroundColorButton: #000000;
  --borderColorButton: #000000;
  --textColorButton: #ffffff;
  --textColorMainBox: #000000;
  --backgroundColorMainBox: #ffffff;
  --borderColorMainBox: #000000;
}

button {
  -webkit-appearance: none;
  background: none;
  box-shadow: #00000033 4px 4px 5px;
  font: inherit;
  color: var(--textColorButton);
  background-color: var(--backgroundColorButton);
  border-radius: var(--borderRadiusButton);
  border: 1px solid var(--borderColorButton);
  min-width: fit-content;
  width: 12em;
  height: var(--heightButton);
  padding: 10px;
  margin: auto 2%;
  transition: transform ease-in-out 0.03s;
}
button:hover{
  cursor: pointer;
}
button:active{
  transform:scale(0.97);
}

.visibility-animation {
  transition: opacity ease-in-out 0.2s, visibility ease-in-out 0.2s;
}
.consent-box, .options-box {
  position: absolute;
  bottom: 15px;
  color: var(--textColorMainBox);
  background-color: var(--backgroundColorMainBox);
  border: 1px solid var(--borderColorMainBox);
  border-radius: var(--borderRadiusMainBox);
  padding: 10px;
}

.primary-banner-buttons {
  flex-direction: column;
}

.primary-banner-buttons>button {
  margin: var(--marginButton) auto;
}
.consent-box{
  display: grid;
  grid-template-rows: 30px auto;
  grid-template-columns: auto auto;
  max-height: var(--maxHeightConsentBox);
  min-height: 225px;
  width: 30%;
  min-width: 400px;
  margin: 0 auto 0 2%;
  column-gap: 10px;
}

.options-box{
  max-height: var(--maxHeightOptionsBox);
  width: 90%;
  margin: 0 5%;
  display: flex;
  justify-content: space-around;
  flex-direction: column;
}

.options{
  display: flex;
  flex-direction: column;
  overflow-y: auto;
}

.option{
  margin: 1em;
  display: grid;
  min-height: 25px;
  grid-template-columns: 15% auto 25px;
}
.option p{
  margin: 0 auto;
}

.checkbox-container {
  display: block;
  position: relative;
  padding-left: 35px;
  margin-bottom: 12px;
  cursor: pointer;
  font-size: 22px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
/* Hide the browser's default checkbox */
.checkbox-container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
  margin: 0;
}
/* Create a custom checkbox */
.checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  background-color: #eeeeee;
}
.checkbox-container:hover .checkmark {
  background-color: #cccccc;
}
.checkbox-container input:checked~.checkmark {
  background-color: #278e56;
}
.checkbox-container input:disabled~.checkmark {
  background-color: #8e8e8e;
  cursor:not-allowed;
}
.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}
.checkbox-container input:checked~.checkmark:after {
  display: block;
}
input:focus-visible~.checkmark {
  outline: 2px solid black;
}
.checkbox-container .checkmark:after {
  left: 9px;
  top: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 3px 3px 0;
  transform: rotate(45deg);
}

.buttons{
  display: flex;
  justify-content: end;
}
.options-banner-buttons > button{
  margin: auto 5px;
}

.info-text{
  width: 100%;
  height: auto;
  overflow-y: auto;
  grid-row-start: 1;
  grid-row-end: 3;
}

.close-button{
  background-color: #00000000;
  color: #000000;
  border: none;
  box-shadow: none;
  padding: 0;
  line-height: 25px;
  height: 25px;
  width: 25px;
  font-size: 1.5em;
  margin-left: auto;
  margin-bottom: auto;
}


@media only screen and (max-width: 1000px) {
  .primary-banner-buttons{
    flex-direction: column;
  }
    .primary-banner-buttons > button{
    margin: var(--marginButton) auto;
  }
  .consent-box{
    max-height: var(--maxHeightConsentBoxTablet);
    width: 90%;
  }
}

@media only screen and (max-width: 700px) {
  .consent-box, .options-box {
    min-height: 300px;
    padding: 10px;
  }
  .consent-box{
    max-height: var(--maxHeightConsentBoxMobile);
    min-width: unset;
    grid-template-rows: auto auto;
    grid-template-columns: auto 30px;
    column-gap: 5px;
  }
  .options-box{
    flex-direction: column;
  }

  .info-text{
    width: auto;
    grid-row-start: 1;
    grid-row-end: 1;
  }

  button {
    text-align: center;
    width: 90%;
    border-radius: var(--borderRadiusButtonMobile);
    margin: var(--marginButton) auto;
  }
  .primary-banner-buttons {
    grid-column-start: 1;
    grid-column-end: 3;
  }
  .options-banner-buttons button{
    margin:var(--marginButton)
  }
}

